--- a/css/standard.css
+++ b/css/standard.css
@@ -37,7 +37,7 @@ body article p img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	float: left;
+	float: right;
 	padding: 0.5em;
 }
 
@@ -45,7 +45,7 @@ body article p img {
 	text-align: left;
 	float: right;
 }
-f73 {
+#f73 {
 	font-weight: bold;
 	color: red;
 }
@@ -57,8 +57,8 @@ f73 {
 	border-color: #999;
 	background-color: #daffb3;
 	display: flex;
+	justify-content: space-around;
 	text-align: center;
-	zoom
 }
 
 #navBar a {
@@ -71,7 +71,7 @@ f73 {
 }
 
 /* Aufgabe 6 */
-body header {
+body > header {
 	border-style: solid;
 	border-width: 5px;
 	border-color: black;
@@ -101,11 +101,11 @@ header {
 }
 aside {
 	order: 2;
-	width: 18%
+	width: 15%
 }
 article {
 	order: 3;
-	width: 75%;
+	width: calc(85% - 4em - 4px);
 }
 footer {
 	order: 4;
@@ -113,3 +113,12 @@ footer {
 }
 
 /* Aufgabe 9 */
+figure {
+	display: inline-block;
+	margin: 0.2em;
+	width: 32%;
+	font-style: italic;
+}
+figure > img{
+	width: 100%;
+}
